ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: minio.local
    http:
      paths:
      - path: /
        backend:
          serviceName: minio-service
          servicePort: 9000
  - host: juice-shop.local
    http:
      paths:
      - path: /
        backend:
          serviceName: juice-shop-service
          servicePort: 3000
  - host: kibana.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-service
          servicePort: 5601
  - host: send.local
    http:
      paths:
      - path: /
        backend:
          serviceName: send-service
          servicePort: 1443
